--- a/portfolio.html
+++ b/portfolio.html
@@ -25,27 +25,27 @@
             <h1>Portfolio</h1>
 
             <div class="work">
-                <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+                <img src="images/technics-q-c-640-480-1.jpg" alt="Word Guess">
 
                 <h3>Word Guess</h3>
             </div>
             <div class="work">
-                <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+                <img src="images/technics-q-c-640-480-2.jpg" alt="RPG Game">
 
                 <h3>RPG Game</h3>
             </div>
             <div class="work">
-                <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+                <img src="images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
                 <h3>Trivia Game</h3>
             </div>
             <div class="work">
-                <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+                <img src="images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
                 <h3>Rutgers Info Widget</h3>
             </div>
             <div class="work">
-                <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+                <img src="images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
                 <h3>Rock Paper Scissors</h3>
             </div>
@@ -62,3 +62,88 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!doctype html>
+<html lang="en-us">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Portfolio | Your Name</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+
+
+<header id="masthead">
+    <div class="container">
+        <a href="index.html" id="logo">Your Name</a>
+        <nav>
+            <a href="index.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
+</header>
+
+<div id="main-container" class="container">
+    <section class="main-section">
+        <h1>Portfolio</h1>
+
+        <div class="work">
+            <img src="images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+
+            <h3>Word Guess</h3>
+        </div>
+        <div class="work">
+            <img src="images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+
+            <h3>RPG Game</h3>
+        </div>
+        <div class="work">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                <div class="container">
+                    <a class="navbar-brand">Mike Babayev</a>
+                    <ul class="nav justify-content-end">
+                        <img src="images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+
+                        <h3>Trivia Game</h3>
+                </div>
+                <div class="work">
+                    <img src="images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+
+                    <h3>Rutgers Info Widget</h3>
+                </div>
+                <div class="work">
+                    <img src="images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+
+                    <h3>Rock Paper Scissors</h3>
+                </div>
+
+    </section>
+
+    </div>
+
+    <footer class="fixed-bottom"></footer>
+    <nav class="container">
+        Copyright &copy;
+    </nav>
+    </footer>
+
+    <!-- <footer class="fixed-bottom">
+                <nav class="navbar fixed-bottom navbar-light bg-faded">
+                    <a class="navbar-brand fixed-bottom">Copyright &copy;</a>
+                </nav>
+            </footer> -->
+<!-- </body>
+
+</html> -->--> -->
