--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio | Your Name</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 
     <header id="masthead">
         <div class="container">
-            <a href="index.html" id="logo">Your Name</a>
+            <a href="index.html" id="logo">Mike Babayev</a>
             <nav>
                 <a href="index.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
@@ -25,26 +25,34 @@
             <h1>Portfolio</h1>
 
             <div class="work">
-                <img src="images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+                <a href="https://mikeb13.github.io/Psychic-Game/">
+                    <img src="images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+                </a>
+                <h3>Word Guess
 
-                <h3>Word Guess</h3>
+
+                </h3>
             </div>
             <div class="work">
-                <img src="images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
+                <a href="https://mikeb13.github.io/unit-4-game/">
+                    <img src="images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+                </a>
                 <h3>RPG Game</h3>
             </div>
             <div class="work">
-                <img src="images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
+                <a href="https://mikeb13.github.io/TriviaGame/">
+                    <img src="images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+                </a>
                 <h3>Trivia Game</h3>
             </div>
             <div class="work">
-                <img src="images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-                <h3>Rutgers Info Widget</h3>
+                <a href="https://mikeb13.github.io/TrainScheduler/">
+                    <img src="images/technics-q-c-640-480-7.jpg" alt="Train Scheduler">
+                </a>
+                <h3>Train Scheduler</h3>
             </div>
             <div class="work">
+
                 <img src="images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
                 <h3>Rock Paper Scissors</h3>
@@ -61,89 +69,4 @@
     </footer>
 </body>
 
-</html>
-
-
-
-
-
-
-
-
-
-
-
-<!-- <!doctype html>
-<html lang="en-us">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Portfolio | Your Name</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
-
-
-<header id="masthead">
-    <div class="container">
-        <a href="index.html" id="logo">Your Name</a>
-        <nav>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </div>
-</header>
-
-<div id="main-container" class="container">
-    <section class="main-section">
-        <h1>Portfolio</h1>
-
-        <div class="work">
-            <img src="images/technics-q-c-640-480-1.jpg" alt="Word Guess">
-
-            <h3>Word Guess</h3>
-        </div>
-        <div class="work">
-            <img src="images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-            <h3>RPG Game</h3>
-        </div>
-        <div class="work">
-            <nav class="navbar navbar-expand-lg navbar-light bg-white">
-                <div class="container">
-                    <a class="navbar-brand">Mike Babayev</a>
-                    <ul class="nav justify-content-end">
-                        <img src="images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-                        <h3>Trivia Game</h3>
-                </div>
-                <div class="work">
-                    <img src="images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-                    <h3>Rutgers Info Widget</h3>
-                </div>
-                <div class="work">
-                    <img src="images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-                    <h3>Rock Paper Scissors</h3>
-                </div>
-
-    </section>
-
-    </div>
-
-    <footer class="fixed-bottom"></footer>
-    <nav class="container">
-        Copyright &copy;
-    </nav>
-    </footer>
-
-    <!-- <footer class="fixed-bottom">
-                <nav class="navbar fixed-bottom navbar-light bg-faded">
-                    <a class="navbar-brand fixed-bottom">Copyright &copy;</a>
-                </nav>
-            </footer> -->
-<!-- </body>
-
-</html> -->--> -->
+</html>s
